<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_calc_graf"
        android:layout_width="109dp"
        android:layout_height="111dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="177dp"
        android:onClick="abrirCalculadoras"
        android:text="@string/txt_btn_calc_graf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_calc_senc"
        android:layout_width="109dp"
        android:layout_height="111dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="232dp"
        android:onClick="abrirCalculadoras"
        android:text="@string/txt_btn_calc_sencilla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_calc_cient"
        android:layout_width="119dp"
        android:layout_height="107dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="96dp"
        android:onClick="abrirCalculadoras"
        android:text="@string/txt_btn_calc_cientifica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_calc_prog"
        android:layout_width="109dp"
        android:layout_height="111dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="176dp"
        android:onClick="abrirCalculadoras"
        android:text="@string/txt_btn_calc_prog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_titulo_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="140dp"
        android:text="@string/txt_titulo_calculadoras"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>